--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "tsx": "^4.15.7",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@types/node": "^20.12.12",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.6"
   }
 }
