feat: update TypeScript configuration to CommonJS; refactor imports in service files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ig-api-service",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node dist/server.js",
