--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
       "target": "ES2022",
-      "module": "ES2022",
-      "moduleResolution": "bundler",
+      "module": "CommonJS",
+      "moduleResolution": "node",
       "outDir": "dist",
       "strict": true,
       "esModuleInterop": true,
